# LibraryManagementSystem

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: lms.puml  spec.md
inc/: CBook.h  CBorrowTransaction.h  CLibrary.h  CReturnTransaction.h  CUser.h  ITransaction.h
src/: CBook.cpp  CBorrowTransaction.cpp  CLibrary.cpp  CReturnTransaction.cpp  CUser.cpp  main.cpp
